# buscar_duplicados

./: README.md  pyproject.toml  requirements.txt
src/buscar_duplicados/: __init__.py  buscar_duplicados.py  cli.py  main.py
